--- a/Diplom.Enocryption/Diplom.Enocryption.csproj
+++ b/Diplom.Enocryption/Diplom.Enocryption.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Diplom.DataBase\Diplom.DataBase.csproj" />
+  </ItemGroup>
+
 </Project>
