Реализовал логику MVC и сделал фейк базы

--- a/Diplom/Diplom.csproj
+++ b/Diplom/Diplom.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Diplom.Enocryption\Diplom.Enocryption.csproj" />
+    <ProjectReference Include="..\DiplomInfo.DataBase\DiplomInfo.DataBase.csproj" />
   </ItemGroup>
 
 </Project>
