сделал отдельные util для работы с фалйом и работы с инфо данными

--- a/Diplom.Domain/Diplom.Domain.csproj
+++ b/Diplom.Domain/Diplom.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Diplom.Domain\Diplom.Domain.csproj" />
+    <ProjectReference Include="..\Diplom.Utils\Diplom.Utils.csproj" />
   </ItemGroup>
 
 </Project>
