--- a/Diplom/Diplom.csproj
+++ b/Diplom/Diplom.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="tempStorage\" />
     <Folder Include="uploads\" />
     <Folder Include="Views\Home\js\" />
   </ItemGroup>
